--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "jest": "^23.6.0",
     "supertest": "^3.3.0"
   },
