--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    "rules": {
+        "no-param-reassign": "off",
+        "no-underscore-dangle": "off",
+        "func-names": "off"
+    }
 }
