--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "jest": "^23.6.0",
+    "rewire": "^4.0.1",
     "supertest": "^3.3.0"
   },
   "jest": {
