--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cloudinary": "^1.11.0",
     "compression": "^1.7.3",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^6.1.0",
     "express": "~4.16.0",
