--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
         "no-param-reassign": "off",
         "no-underscore-dangle": "off",
         "func-names": "off",
-        "camelcase": "off"
+        "camelcase": "off",
+        "no-console": "off"
     }
 }
